@@ -1,8 +1,16 @@
+2003-03-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* input/regression/tie-chord-partial.ly: new file.
+
 2003-03-05  Heikki Junes <hjunes@cc.hut.fi>
 
 	* lilypond.words: add 3
 
 2003-03-05  Han-Wen Nienhuys  <hanwen@cs.uu.nl>
+
+	* scm/new-markup.scm (markup-function-list): add finger-markup
+
+	* input/tutorial/brahms-tweaked.ly: new markup 
 
 	* scm/bass-figure.scm (brew-one-figure): bugfix for large bass figures 
 
